# specforge-ai

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  promptfoo.config.js
.github/workflows/: ci.yml
dashboard/: Dockerfile  app.py  pyproject.toml
demo/: README.md
demo/api-go/: Dockerfile  go.mod
demo/contracts/: README.md  foundry.toml
demo/contracts/hardhat/: hardhat.config.js  package-lock.json  package.json
demo/contracts/src/: OrderEscrow.sol
demo/mutator-rust/: Cargo.toml
demo/mutator-rust/src/: main.rs
demo/specs/: checkout.feature  openapi.yaml  product-spec.md
docs/: architecture.md  setup.md  walkthrough.md
docs/adr/: ADR-0001-monorepo-shape.md  ADR-0002-provider-abstraction.md
evals/datasets/: promptfoo-tests.yaml
evals/prompts/: defect-triage.txt  requirements-extraction.txt  test-generation.txt
evals/providers/: mock-provider.js
evals/rubrics/: default-rubric.txt
examples/: sample-eval-result.json  sample-report.md  sample-run-manifest.json
n8n/: specforge-alert-workflow.json
platform/: Dockerfile  README.md  pyproject.toml
platform/src/specforge_ai/: __init__.py  app.py  cli.py  config.py  evaluation.py  models.py  orchestrator.py  parsers.py  reporting.py  retrieval.py  store.py
platform/src/specforge_ai/adapters/: __init__.py  base.py  go_api.py  solidity.py
platform/src/specforge_ai/llm/: __init__.py  anthropic.py  base.py  mock.py
platform/tests/: test_evaluation.py  test_parsers.py  test_retrieval.py
scripts/: generate-social-preview.ps1
(+5 files in other folders)
